FIX: Fix name alignment and background color
Fixed the problem that name doesn't align in one line when getting into
detailed post screen. Also, changed the background color to give better
user experience.

--- a/src/component/Detail.css
+++ b/src/component/Detail.css
@@ -20,6 +20,14 @@
     margin-right: 16px; /* Margin on the right to separate the image and text */
 }
 
+.username_and_bottons {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .post_buttons {
     width: 100%;
     display: flex;
